Add font-awesome gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap.min";
+@import "font-awesome";
 @import "owl.carousel.min";
 @import "owl.theme.default.min";
 @import "themify-icons.min";
