Add font-awesome gem

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -33,7 +33,7 @@
 
   <!-- Scroll to top button -->
   <div class="scrolltotop">
-    <a class="button-circle button-circle-sm button-circle-dark" href="#"><i class="ti-arrow-up"></i></a>
+    <a class="button-circle button-circle-sm button-circle-dark" href="#"><i class="fa fa-arrow-up"></i></a>
   </div>
   <!-- end Scroll to top button -->
 
@@ -47,7 +47,7 @@
         <!-- smoothscroll button -->
         <div class="position-bottom">
           <a class="button-circle button-circle-lg button-border-1px button-circle-outline-white smoothscroll icon-lg" href="#about">
-            <i class="ti-arrow-down"></i>
+            <i class="fa fa-arrow-down"></i>
           </a>
         </div>
       </div><!-- end container -->
@@ -220,19 +220,19 @@
       <div class="row icon-5xl">
         <!-- Icon text box 1 -->
         <div class="col-12 col-md-4">
-          <i class="ti-star text-dark"></i>
+          <i class="fa fa-star text-dark"></i>
           <h5 class="font-weight-normal margin-top-20">Promotion</h5>
           <p>Promotion et distribution des meilleurs produits de santé</p>
         </div>
         <!-- Icon text box 2 -->
         <div class="col-12 col-md-4">
-          <i class="ti-rocket text-dark"></i>
+          <i class="fa fa-rocket text-dark"></i>
           <h5 class="font-weight-normal margin-top-20">Expertise</h5>
           <p>Un savoir scientifique et une expertise technique dans le domaine pharmaceutique</p>
         </div>
         <!-- Icon text box 3 -->
         <div class="col-12 col-md-4">
-          <i class="ti-world text-dark"></i>
+          <i class="fa fa-globe text-dark"></i>
           <h5 class="font-weight-normal margin-top-20">Partenariat</h5>
           <p>Un partenariat avec des laboratoires de renommée internationale</p>
         </div>
