Add themify gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap.min";
 @import "font-awesome";
+@import "themify-icons";
 @import "owl.carousel.min";
 @import "owl.theme.default.min";
 @import "magnific-popup.min";
