--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -271,17 +271,17 @@
         </div>
         <div class="col-12 col-md-8 text-md-right">
             <%= flash[:notice] %>
-            <%= form_with(url:"/thank_you", method: "post", local: true) do |form| %>
+            <%= form_with(url:"/static/thankyou", local: true) do |form| %>
                 <div class="form-row">
                     <div class="col-12 col-sm-6">
-                        <%= form.text_field :name,  placeholder: "Nom" %>
+                        <%= form.text_field :name, required: true,  placeholder: "Nom" %>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <%= form.text_field :email,  placeholder: "Email" %>
+                        <%= form.text_field :email, required: true,  placeholder: "Email" %>
                     </div>
                 </div>
-                <%= form.text_field :subject,  placeholder: "Sujet" %>
-                <%= form.text_area :message, placeholder: "Message"%>
+                <%= form.text_field :subject, required: true,  placeholder: "Sujet" %>
+                <%= form.text_area :message, required: true, placeholder: "Message"%>
                 <%= form.submit "Envoyer", class: "button button-lg button-border-1px button-outline-dark-2" %>
             <% end %>
         </div>
