Add mailer -fix

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,3 +30,11 @@ div#partners {
 #flash-message {
   text-align: center;
 }
+
+textarea#contact_message {
+    min-height: 210px;
+}
+
+form#new_contact {
+    margin-bottom: 20px;
+}
