Add mailer -fix

--- a/app/views/contacts/create.js.erb
+++ b/app/views/contacts/create.js.erb
@@ -1,2 +1,3 @@
 $('#flash-message').html("<%= j render 'flash' %>").delay(3000).fadeOut(4000);
 $('form').find("input[type=text], textarea").val("");
+$('form').find("input[type=email], textlarea").val("");
