--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,7 @@
 <body data-preloader="2" data-spy="scroll" data-target=".navbar">
-
+  <%= title 'Main page' %>
+  <% description 'Website main page.' %>
+  <% keywords 'Profertil, Ialos, Santes, artemis, fertilité, hyaluronique' %>
   <header>
     <nav class="navbar navbar-dark navbar-absolute navbar-fixed"><!-- add 'navbar-dark/navbar-grey/navbar-transparent/navbar-transparent-dark' -->
       <div class="container">
