--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -346,8 +346,8 @@
         L-CARNITINE, L-ARGININE, GLUTATHION, SELENIUM, ZINC, COENZYME Q10, ACIDE FOLIQUE,  VITAMINE E. <br><br>
         <h6>DESCRIPTIF :</h6>
         PROFERTIL EST LE MEILLEUR PRODUIT DE FERTILITE MASCULINE.<br><br>
-        GRACE A SA COMPOSITION SPECIFIQUE, PROFERTIL PERMET AUSSI D’AMELIORER LE NOMBRE, LA MOBILITE, LA MORPHOLOGIE ET LE VOLUME DU SPERME.<br><br>
-        PROFERTIL PERMET AUSSI DE PREVENIR LA FRAGMENTATION DE L’ADN DES SPERMATOZOIDES REDUISANT AINSI LES RISQUES DE FAUSSES COUCHES ET DE GROSSESSES ARRETEES.<br><br>
+        GRACE A SA COMPOSITION SPECIFIQUE, PROFERTIL PERMET D’AMELIORER LE NOMBRE, LA MOBILITE, LA MORPHOLOGIE ET LE VOLUME DU SPERME.<br><br>
+        PROFERTIL PERMET DE PREVENIR LA FRAGMENTATION DE L’ADN DES SPERMATOZOIDES REDUISANT AINSI LES RISQUES DE FAUSSES COUCHES ET DE GROSSESSES ARRETEES.<br><br>
         PROFERTIL A 6 ETUDES CLINIQUES REALISEES SUR PLUS DE 1000 PATIENTS PUBLIEES DANS DES REFERENCES DE RENOMMEE MONTRANT UN TAUX DE GROSSESSE SPONTANNEE ENTRE 26 ET 41%.<br><br>
         PROFERTIL AUGMENTE LES CHANCES DE SUCCES EN PROCREATION MEDICALEMENT ASSISTEE (PMA).<br><br>
         PROFERTIL EST RECOMMANDE PAR LES EXPERTS DE LA FERTILITE A TRAVERS LE MONDE DANS PLUS DE 70 PAYS AVEC PLUS DE 1.000.000 DE THERAPIES PAR AN.<br><br>
@@ -434,7 +434,7 @@
           <div class="vendors">
             <a href="https://www.pharma-shop.tn/digestion-et-transit/5255-ialos-complement-alimentaire-20-comprimes.html?search_query=ialos&results=1" target="_blank">pharma-shop.tn</a>
             <a href="https://www.tunisiepara.com/shop/ialos-capsules" target="_blank">tunisiepara.com</a>
-            <a class="last" href="http://1001para.tn/" target="_blank">1001para.tn</a>
+            <a class="last" href="http://1001para.tn/recherche?controller=search&orderby=position&orderway=desc&search-cat-select=0&search_query=ialos&submit_search=" target="_blank">1001para.tn</a>
           </div>
         </div>
       </div>
@@ -465,8 +465,8 @@
           <h6>Où acheter ce produit ?</h6>
           <div class="vendors">
             <a href="https://www.pharma-shop.tn/complements-alimentaires/3896-santes-14-ovules-vginaux.html?search_query=santes&results=1" target="_blank">pharma-shop.tn</a>
-            <a href="https://www.tunisiepara.com" target="_blank">tunisiepara.com</a>
-            <a class="last" href="http://1001para.tn/" target="_blank">1001para.tn</a>
+            <a href="https://www.tunisiepara.com/?s=santes&post_type=product" target="_blank">tunisiepara.com</a>
+            <a class="last" href="http://1001para.tn/recherche?controller=search&orderby=position&orderway=desc&search-cat-select=0&search_query=santes&submit_search=" target="_blank">1001para.tn</a>
           </div>
         </div>
       </div>
