--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -144,7 +144,7 @@
             <a href="" data-toggle="modal" data-target="#profertilModal" ></a><!-- Portfolio Single link -->
             <div class="portfolio-title">
               <div>
-                <h6 class="font-weight-normal">Profertil</h6>
+                <h6 class="font-weight-normal">PROFERTIL</h6>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
             <a href="" data-toggle="modal" data-target="#profertilFModal" ></a><!-- Portfolio Single link -->
             <div class="portfolio-title">
               <div>
-                <h6 class="font-weight-normal">Profertil Female</h6>
+                <h6 class="font-weight-normal">FROFERTIL FEMALE</h6>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
             <a href="" data-toggle="modal" data-target="#ialosModal" ></a><!-- Portfolio Single link -->
             <div class="portfolio-title">
               <div>
-                <h6 class="font-weight-normal">Ialos</h6>
+                <h6 class="font-weight-normal">IALOS</h6>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
             <a href="" data-toggle="modal" data-target="#santesModal" ></a><!-- Portfolio Single link -->
             <div class="portfolio-title">
               <div>
-                <h6 class="font-weight-normal">Santes</h6>
+                <h6 class="font-weight-normal">SANTES</h6>
               </div>
             </div>
           </div>
