--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -158,7 +158,7 @@
             <a href="" data-toggle="modal" data-target="#profertilFModal" ></a><!-- Portfolio Single link -->
             <div class="portfolio-title">
               <div>
-                <h6 class="font-weight-normal">FROFERTIL FEMALE</h6>
+                <h6 class="font-weight-normal">PROFERTIL FEMALE</h6>
               </div>
             </div>
           </div>
