--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= title 'Main page' %>
+    <% description 'Website main page.' %>
+    <% keywords 'Profertil, Ialos, Santes, artemis, fertilité, hyaluronique' %>
   </head>
 
   <body>
