--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= title 'Main page' %>
-    <% description 'Website main page.' %>
-    <% keywords 'Profertil, Ialos, Santes, artemis, fertilité, hyaluronique' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
