--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -204,7 +204,7 @@
             <h1 class="line-height-150 margin-0">Profertil à travers le monde </h1>
           </div>
           <div class="col-12 col-md-6 text-md-right">
-            <a class="button-circle button-circle-xl button-border-1px button-circle-white button-circle-animation-drop margin-top-20 popup-youtube" data-youtube-src="#" allow="autoplay" href="#"><i class="fa fa-play"></i></a>
+            <!-- <a class="button-circle button-circle-xl button-border-1px button-circle-white button-circle-animation-drop margin-top-20 popup-youtube" data-youtube-src="#" allow="autoplay" href="#"><i class="fa fa-play"></i></a> -->
           </div>
         </div><!-- end row -->
       </div><!-- end container -->
